<resources>
    <string name="app_name">Lokakaka</string>
    <string name="menu_welcome">Salutations</string>
    <string name="menu_encyclopedia">Activités</string>
    <string name="menu_trading">Routes</string>
    <string name="menu_chat">Discord</string>
    <string name="title_full">Lokakaka!Org█</string>
    <string name="title">Lokakaka!Org</string>
    <string name="welcome_text">------------------------------\n|  Salutations, hors-la-loi !  |\n------------------------------\n\nSi tu es intéressé par la contrebande, le piratage, ou toute autre activité illégale qui peut te donner accès à beaucoup d’UECs, alors nous avons quelque chose en commun ! Pourquoi ne pas rejoindre notre organisation ? Ensemble, nous sommes plus intelligents et plus forts pour nos prochaines aventures !\n\nDans le syndicat Lokakaka, l’objectif n’est pas de te forcer à jouer d’une façon ou d’une autre. Les joueurs occasionnels sont les bienvenus de même que les pirates confirmés, et l’ambiance générale est que nous sommes ici pour passer un bon moment ensemble dans les recoins obscurs du Verse, tout en nous entraidans les uns les autres. C’est tout aussi bien si on ne te voit pas pendant longtemps ou si tu joues tous les jours à Star Citizen. Donc, si tu veux partager ta sagesse criminelle, apprendre à opérer en dehors de la loi, ou si tu veux simplement rencontrer des gens pour apporter un Drake Caterpillar plein à craquer de Neon à bon port, sois le bienvenue dans la famille Lokakaka.\n\nSur cette application, tu trouveras des informations sur les differentes marchandises de Star Citizen que nous avons l’habitude de manipuler, ainsi que des informations sur les autres activités illégales lucratives du Verse, telles que le piratage de satellites de surveillance ou encore le data-running (une fois implémenté en jeu). Tu trouveras également des liens vers des outils te permettant d’optimiser tes routes commerciales, ainsi que vers un serveur Discord ou les membres de l’organisation pourrons se rencontrer et monter des coups ensembles !\n\n\n------------------------------\n|   Manifeste de la Lokakaka   |\n------------------------------\n\nL’objectif de cette organisation est de rassembler les joueurs qui opèrent en dehors des lois pour qu’ils s’aident mutuellement à découvrir le Verse et le b.a.-ba de la piraterie spatiale. La principale activité en ce moment est la contrebande, mais nous sommes bien sûr ouverts à tous les autres types de contrats illégaux et juteux, comme la chasse à la prime, le piratage, et dans le futur le data-running…\n\nLe symbole de l’organisation rassemble ces principes dans son design : la tête de mort rappèle le "Jolly Roger", célébrissime drapeau des pirates d’avant le 20ème siècle, montrant l’ouverture du syndicat à toutes sortes d’activités illégales du Verse, pour peu qu’elles soient lucratives. Sa coiffe représente un fruit renfermant caché en son sein un sachet de poudre, la combinaison des deux élèments symbolisant les techniques des contrebandiers pour transporter des marchandises illégales d’un point A à un point B.\n\n\n------------------------------\n|     Les règles du syndicat     |\n------------------------------\n\nTout le monde est traité de manière égale. Il n’y à pas de supérieurs ou d’inferieurs aux autres !\n\nTous les membres sont encouragés à organiser des évenements ou des oprations de groupes, mais n’y sont pas forcés !\n\nLes membres doivent éviter de se voler, s’affronter ou se tuer entre eux (à moins bien sûr qu’il ne s’agisse d’un duel organisé) !\n\n</string>
    <string name="trading_calculator_url">https://sc-trading.kamille.ovh/trading/</string>
    <string name="contrebande">Contrebande</string>
    <string name="nettoyage">Nettoyage</string>
    <string name="hacking">Hacking</string>
    <string name="mercenariat">Mercenariat et assassinat</string>
    <string name="datarunning">Convoyage de données</string>
    <string name="piraterie">Piraterie</string>
    <string name="courses">Courses</string>
    <string name="hacking_title_missions">Missions</string>
    <string name="hacking_title_microships">Cryptoclef</string>
    <string name="hacking_title_crimestat">CrimeStat</string>
    <string name="hacking_content_missions">Alors on se sent un esprit de pirate numérique ?  Tu pourras avoir accès durant tes périgrinations de hors-la-loi à des missions spéciales te demandant de pirater des Comm Arrays, pour une récompense d’envirrons 20 000 UECs. Si la récompense parrait alléchante, la mission elle en revanche n’est pas si simple. Voici le plan :\n\n1– Préparation\n\nPour réaliser cette mission, tu devras te rendre aux abords d’un Comm Array, pour celà je te recommande d’utiliser un vaisseau discret que tu pourrez cacher facilement.\nIl sera ensuite obligatoire d’acheter ou de récuperer une micropuce de piratage. Un guide sur cette page t’indiquera les differences entre les puces disponibles. La mission indiquera également un endroit ou tu pourras en obtenir une gratuitement.\nUne arme est trés recommandée pour cette mission. En effet, le système vas déclencher une mission inverse proposant à un autre citoyen d’empecher ton hack. Il faudra donc pouvoir réagir en cas de contre-intrusion ! Un SMG équipé de silencieux fera trés bien l’affaire.\n\n2- Lieu de l’attaque\n\nA ton approche du sattelite, tu recevra dans ton vaisseau des messages des autorités t’ordonnant de quitter la zone surveillée. Evidemment tu vas devoir les ignorer et te garer aux abords du sattelites. Ceci implique que ta Crime Stat vas forcement augmenter de 1 point pour désobeissance.\nAfin de protéger ton vaisseau des tourelles, essaye de te placer juste sur la tranche des panneaux solaires, de cette manère les tirs de sécurité ne pourrons t’atteindre car tu seras protégé par les panneaux.\n\n3- Le hacking\n\nUne fois en EVA, dirige toi vers l’intérireur du sattelite par une des deux ouvertures. Tu trouvera le PC central dans lequel il faudra insérer la micropuce. Appuy sur 4 après avoir équipé la puce dans ton inventaire pour la prendre en main, et insère la dans la fiche prévue.\nTu vas désormais devoir attendre que le pirateg soit terminé en surveillant l’écran au cas ou une erreur apparaisse. Pas panique, clique simplement sur le bouton "CONTINUE" pour poursuivre le hack.\n\n4- Blackout complet\n\nUne fois le système accédé, tu vas pouvoir mettre le sattélite hors-ligne. Il faudra s’assurer que personne ne viendra le remettre en ligne pendant 5 très longues minutes. Cache toi dans un coin pour avoir une visiblité sur les deux entrés, éteint ta lumière, sort ton arme et patiente. Prètes attentions aux sons, si tu entends un vaisseau approcher, c’est qu’il vas falloir se salir les mains. Sois sans pitié avec la moindre personne que tu vois dans le sattelite.\n\nUne fois ces étapes franchis, felicitations Hacker ! Tu pourras toucher ta prime et partir effacer ton casier. Ou pas ?\n\n</string>
    <string name="hacking_walesko">Walesko : Lent - Instable - 199 UEC</string>
    <string name="hacking_reauthorizer">Re-Authorizer : Lent - Stable - 450 UEC</string>
    <string name="hacking_tigersclaw">Tigersclaw : Moyen - Standart - 999 UEC</string>
    <string name="hacking_ripper">Ripper : Rapide - Instable - 1245 UEC</string>
    <string name="hacking_icepick">IcePick : ??? - ??? - 1600 UEC</string>
    <string name="datarunning_content">Le Data Running sera une carrière possible dans le verse. Ce métier consistera tout simplement à faire transiter des données sensibles d’un point A à un point B en les transportant physiquement à l’aide d’un super-ordinateur à bord d’un vaisseau. On sais peu de choses à l’heure actuelle sur le convoyage de données, mais si ça se transporte, alors ça interrêsse la Lokakaka !\n\nUne mission de type "légale" devrais ressembler à de la collecte d’informations (résultant de scans d’astéroides par exemple) ou encore de ramener les informations concernant un vaisseau (propriétaire, position) à un commanditaire.\n\nUne mission de type "illégale" consisterais à intercepter des données sensibles échangées entre deux vaisseaux, ou encore à battre un autre datarunner lors d’une "course" à la livraison sur une mission existante.\n\nA l’heure actuelle, seuls deux vaisseaux semblent disposer du matériel nécéssaire à cette activité :</string>
    <string name="datarunning_herald">Drake Interplanetary – The Herald\n\nLe Herald de Drake est un vaisseau petit, blindé conçu pour transporter rapidement des données de ce de manière sécurisée. Prévus pour une seule personne, il permetrat aux freelanceurs de se lancer dans cette activité. Ces impréssionnants réacteurs lui permettent de se déplacer rapidement, et une autodestructions des données pourrais être possible en cas de capture.</string>
    <string name="datarunning_mercury">Crusader Industries – Mercury Star Runner\n\nLe Mercury Star Runner est un vaisseau trés polyvalent, capable d’embarquer 96 SCU de cargo en plus de son ordinateur de bord. Il disposera également de compartiments cachés pour faire transiter des marchandises douteuses sans risque. Véritable Faucon Millenium moderne, ce vaisseau fera le bonheur des contrebandiers polyvalents.</string>
</resources>