<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imageViewBackHacking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewHackingTop"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ruto" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutMicroshipsButton"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorBackground"
                android:padding="1dp"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayoutCrimeStatButton"
                app:layout_constraintStart_toEndOf="@+id/constraintLayoutMissionsButton"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHackingTop">

                <Button
                    android:id="@+id/buttonMicroships"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:drawableTint="@color/colorAccent"
                    android:fontFamily="@font/advanced_pixel"
                    android:padding="8dp"
                    android:text="@string/hacking_title_microships"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutCrimeStatButton"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackground"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHackingTop">

                <Button
                    android:id="@+id/buttonCrimestat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:drawableTint="@color/colorAccent"
                    android:fontFamily="@font/advanced_pixel"
                    android:padding="8dp"
                    android:text="@string/hacking_title_crimestat"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutMissionsButton"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:padding="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHackingTop">

                <Button
                    android:id="@+id/buttonMission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:drawableTint="@color/colorAccent"
                    android:fontFamily="@font/advanced_pixel"
                    android:padding="8dp"
                    android:text="@string/hacking_title_missions"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewContentHacking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/advanced_pixel"
                android:lineSpacingExtra="-8dp"
                android:text="@string/hacking_content_missions"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutMicroshipsButton" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutMicroships"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewContentHacking">

                <ImageView
                    android:id="@+id/imageViewWalesko"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"

                    android:background="@drawable/border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/walesko" />

                <TextView
                    android:id="@+id/textViewWalesko"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/advanced_pixel"
                    android:text="@string/hacking_walesko"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewWalesko"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewWalesko"
                    app:layout_constraintTop_toTopOf="@+id/imageViewWalesko" />

                <TextView
                    android:id="@+id/textViewReauthoriser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/advanced_pixel"
                    android:text="@string/hacking_reauthorizer"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewReauthorizer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewReauthorizer"
                    app:layout_constraintTop_toTopOf="@+id/imageViewReauthorizer" />

                <ImageView
                    android:id="@+id/imageViewReauthorizer"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewWalesko"
                    app:srcCompat="@drawable/reauthorizer" />

                <ImageView
                    android:id="@+id/imageViewTigersclaw"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewReauthorizer"
                    app:srcCompat="@drawable/tigersclaw" />

                <TextView
                    android:id="@+id/textViewTigersclaw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/advanced_pixel"
                    android:text="@string/hacking_tigersclaw"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewTigersclaw"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewTigersclaw"
                    app:layout_constraintTop_toTopOf="@+id/imageViewTigersclaw" />

                <ImageView
                    android:id="@+id/imageViewRipper"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewTigersclaw"
                    app:srcCompat="@drawable/ripper" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewRipper"
                    app:srcCompat="@drawable/icepick" />

                <TextView
                    android:id="@+id/textViewRipper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/advanced_pixel"
                    android:text="@string/hacking_ripper"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewRipper"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewRipper"
                    app:layout_constraintTop_toTopOf="@+id/imageViewRipper" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/advanced_pixel"
                    android:text="@string/hacking_icepick"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>